# binascii-rs

./: .travis.yml  Cargo.toml  README.md
benches/: binascii.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_base16.rs  decode_base32.rs  decode_base64.rs  encode_base16.rs  encode_base32.rs  encode_base64.rs
src/: iters.rs  lib.rs  tests.rs
